--- a/client-react/public/manifest.json
+++ b/client-react/public/manifest.json
@@ -1,19 +1,14 @@
 {
-  "short_name": "React App",
+  "short_name": "Irrigatin system",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
+      "src": "/resources/images/drop.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "/resources/images/drop.png",
       "type": "image/png",
       "sizes": "512x512"
     }
