--- a/controller/platformio.ini
+++ b/controller/platformio.ini
@@ -8,7 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
+[env:esp12e]
 platform = espressif8266
-board = nodemcuv2
+board = esp12e
 framework = arduino
+monitor_speed = 115200
+build_flags = -D DEBUG_MODE=1 -D PLATFORM_ESP8266 -std=c++11
+test_filter = embedded/*
+lib_deps = 
+	google/googletest@^1.12.1
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.8
+	bblanchon/ArduinoJson@^6.21.3
+	arduino-libraries/NTPClient@^3.2.1
+
+[env:native]
+platform = native
+test_filter = desktop/*
+build_flags = -D PLATFORM_NATIVE -D DEBUG_MODE=1 -std=c++11
+lib_deps = 
+	google/googletest@^1.12.1
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.8
+	bblanchon/ArduinoJson@^6.21.3
+	arduino-libraries/NTPClient@^3.2.1
