add esp32 to code

--- a/controller/platformio.ini
+++ b/controller/platformio.ini
@@ -21,6 +21,20 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.3
 	arduino-libraries/NTPClient@^3.2.1
 
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_flags = -D DEBUG_MODE=1 -D PLATFORM_ESP32
+test_filter = embedded/*
+lib_deps = 
+	google/googletest@^1.12.1
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.8
+	bblanchon/ArduinoJson@^6.21.3
+	arduino-libraries/NTPClient@^3.2.1
+	pedroalbuquerque/ESP32WebServer@^1.0
+
 [env:native]
 platform = native
 test_filter = desktop/*
@@ -30,3 +44,4 @@ lib_deps =
 	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^4.4.8
 	bblanchon/ArduinoJson@^6.21.3
 	arduino-libraries/NTPClient@^3.2.1
+	pedroalbuquerque/ESP32WebServer@^1.0
